<resources>
    <!--In-app Strings-->
    <string name="app_name">Groundwater</string>
    <string name="menu_display">Display</string>
    <string name="menu_data">Data</string>
    <string name="menu_settings">Settings</string>
    <string name="title_display">Display</string>
    <string name="title_data">Data</string>
    <string name="title_settings">Settings</string>
    <string name="tab_overview">Individual files</string>
    <string name="tab_details">Collections</string>
    <string name="sync">Sync</string>
    <string name="file_selected">File selected</string>
    <string name="folder_selected">Folder selected</string>
    <string name="what_do_with_file">What do you want to do with this file?</string>
    <string name="what_do_with_folder">What do you want to do with this folder?</string>
    <string name="display">Display</string>
    <string name="delete">Delete</string>
    <string name="overview">Overview</string>
    <string name="detail">Detail</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete">Confirm deletion</string>
    <string name="are_you_sure_delete_file">Are you sure you want to delete the file?</string>
    <string name="are_you_sure_delete_folder">Are you sure you want to delete the folder?</string>
    <string name="connect_btn">Connect</string>
    <string name="send_btn">Send</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="no_files_to_display">No files to display</string>
    <string name="use_this_phone_s_time">Use this phone\'s time?</string>
    <string name="use_this_phone_s_date">Use this phone\'s date?</string>
    <string name="send_to_device">Send to device</string>
    <string name="use_this_phone_s_gps_position">Use this phone\'s GPS position?</string>
    <string name="gps">GPS</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="connection_symbol">Connection symbol</string>
    <string name="date_and_time">Date and Time</string>
    <string name="date_colon">Date:</string>
    <string name="set_date">Set date</string>
    <string name="time_colon">Time:</string>
    <string name="set_time">Set time</string>
    <string name="invalid_gps_coords">Invalid GPS coordinates</string>
    <string name="not_set">Not set</string>
    <string name="start_measuring">Start measuring</string>
    <string name="stop_measuring">Stop measuring</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="generating_plot">Generating plot…</string>
    <string name="plot_all_files">Plot all files</string>
    <string name="discard_changes">Discard changes</string>
    <string name="are_you_sure_discard_changes">Are you sure you want do discard your changes?</string>
    <string name="discard">Discard</string>
    <string name="keep">Keep</string>
    <string name="latitude">Latitude:</string>
    <string name="attenuators">Attenuators:</string>
    <string name="set">Set</string>
    <string name="no_single_file_selected_message">No file selected!\n\nChoose an individual file from the Data screen and it will be plotted here.</string>
    <string name="no_collection_selected_message">No files selected!\n\nTo plot a collection of files, either choose a folder from the Data screen and select \"plot all files\", or connect to a device and begin collecting live data.</string>
    <string name="data_collection_in_progress">Data collection in progress</string>
    <string name="cant_plot_collection_while_live_message">You can\'t plot a collection while data collection is in progress.</string>
    <string name="dismiss">Dismiss</string>
    <string name="please_give_storage_permissions_message">Please give Groundwater access to storage permissions and network access. The app cannot function without the ability to read and write files on this device, and checking your internet connection.</string>
    <string name="update_permissions">Update permissions</string>
    <string name="upload_all">Upload all</string>
    <string name="upload_unsynchronised_files">Upload non-synchronised files?</string>
    <string name="upload_unsyncronised_files_content">Do you want to upload all files in this directory that have not been synchronised to OneDrive?</string>
</resources>
